# metsuke

./: .gitignore  README.md  pyproject.toml
claude/: analyst-prompt.md
docs/: 00-vision.md  01-architecture.md  02-data-model.md  03-interfaces.md  04-roadmap.md  05-risks.md  06-open-questions.md  07-views.md  08-dashboard-fb.md  08-dashboard.md  09-dashboard-implementation-plan.md  BENCH.md  METRICS.md  PRICES.md  RUNBOOK.md  SCHEMA.md
frontend/: README.md  build.mjs  package-lock.json  package.json  tsconfig.json
launchd/: com.metsuke.analyst.plist.template  com.metsuke.archiver.plist.template  com.metsuke.backup.plist.template  com.metsuke.deadman.plist.template  com.metsuke.otelcol.plist.template  com.metsuke.tick.plist.template
otel/: otelcol.yaml
scripts/: analyst-query.py  gen_v2_fixture.py  gen_v2_view_fixtures.py  git-post-commit.sh  hook-sensor.sh  install-app.sh  install-claude-hooks.sh  install-config.sh  install-git-hooks.sh  install-launchd.sh  install-otel-env.sh  install.sh  load-config.sh  run-analyst.sh  statusline.sh  uninstall.sh
tests/: conftest.py  dashboard_values.py  test_analyst.py  test_archiver.py  test_backup.py  test_cli_docs.py  test_commit.py  test_config.py  test_dashboard2.py  test_dashboard_auth.py  test_dashboard_details.py  test_dashboard_lifecycle.py  test_dashboard_pages.py  test_dashboard_reader.py  test_dashboard_server.py  test_dashboard_trace.py  test_hotpath.py  test_ingest.py  test_install.py  test_judgment.py  test_ledger_indexes.py  test_nudge.py  test_otel.py  test_pricing.py  test_redaction.py  test_report.py  (+6 more)
(+114 files in other folders)
