[project]
name = "metsuke"
version = "0.1.0"
description = "Coding-agent LLM cost optimization: transcript ledger + behavioral interventions"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "rich>=15.0.0",
    "zstandard>=0.22",
]

[project.scripts]
metsuke = "metsuke.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metsuke"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
